--- a/doc/hets.bib
+++ b/doc/hets.bib
@@ -55,3 +55,150 @@ and an informal description of the semantics, building on the existing
 CASL Summary.},
   status = {Other}
 }
+
+@article{RiazanovV02,
+  author    = {Alexandre Riazanov and
+               Andrei Voronkov},
+  title     = {The design and implementation of {VAMPIRE}},
+  journal   = {AI Communications},
+  volume    = {15},
+  number    = {2-3},
+  year      = {2002},
+  pages     = {91-110},
+  ee        = {http://iospress.metapress.com/openurl.asp?genre=article{\&}issn=0921-7126{\&}volume=15{\&}issue=2{\&}spage=91},
+  bibsource = {DBLP, http://dblp.uni-trier.de}
+}
+
+@InProceedings{ZimmerAutexier06,
+author =       {J{\"u}rgen Zimmer and Serge Autexier},
+title =        {The {M}ath{S}erve {S}ystem for {S}emantic {W}eb {R}easoning {S}ervices},
+booktitle =    {3rd IJCAR},
+editor =       {U. Furbach and N. Shankar},
+series =       {LNCS 4130},
+year =         2006,
+publisher =    {Springer},
+}
+
+@InProceedings{LuettichEA06a,
+  author = {Klaus L{\"u}ttich and Till Mossakowski},
+  title = {Reasoning {S}upport for {CASL} with {A}utomated {T}heorem {P}roving {S}ystems},
+  note = {WADT 2006, Springer LNCS, to appear},
+  status = {Other}
+}
+
+@article{Mossakowski02,
+  author =	 {Till Mossakowski},
+  title =	 {Relating {\CASL} with Other Specification Languages:
+                  the Institution Level},
+  year =	 2002,
+  journal =	 {Theoretical Computer Science},
+  volume =	 {286},
+  pages =	 {367--475},
+}
+
+@ARTICLE{GoguenBurstall92,
+AUTHOR = "J. A. Goguen and R. M. Burstall",
+TITLE = "Institutions: Abstract Model Theory for Specification and
+Programming",
+JOURNAL = "Journal of the Association for Computing Machinery",
+VOLUME = 39,
+PAGES = {95--146},
+NOTE = {Predecessor in: LNCS 164, 221--256, 1984.},
+YEAR = 1992}
+
+
+@article{GoguenRosu02,
+   author = {J. Goguen and G. Ro\c{s}u},
+   title = {Institution morphisms},
+   journal = {Formal aspects of computing},
+   volume = {13},
+   year = {2002},
+   pages = {274-307},
+}
+
+@unpublished{Habil,
+  Author =	 {T. Mossakowski},
+  Title =	 {Heterogeneous specification and the heterogeneous tool set},
+  Note =	 {Habilitation thesis, University of Bremen},
+  Year = 2005,
+}
+
+@InProceedings{MossakowskiEA06,
+  author = {Till Mossakowski and Christian Maeder and Klaus L{\"u}ttich},
+  title = {The {H}eterogeneous {T}ool {S}et},
+  year = {2007},
+  editor = {Orna Grumberg and Michael Huth},
+  booktitle = {TACAS 2007},
+  publisher = {Springer-Verlag Heidelberg},
+  series = {Lecture Notes in Computer Science},
+  volume = {4424},
+  pages = {519-522},
+  keywords = {proof heterogeneity logic institution prover theorem integration development graph},
+  pdfurl = {http://www.tzi.de/~till/papers/hets-tacas-toolpaper.pdf},
+  psurl = {http://www.tzi.de/~till/papers/hets-tacas-toolpaper.ps},
+  abstract = {Heterogeneous specification becomes more and more important because
+complex systems are often specified using multiple viewpoints,
+involving multiple formalisms. Moreover, a formal software development
+process may lead to a change of formalism during the development.
+However, current research in integrated formal methods only deals
+with ad-hoc integrations of different formalisms.
+
+The heterogeneous tool set (Hets) is a parsing, static analysis and
+proof management tool combining various such tools for individual
+specification languages, thus providing a tool for heterogeneous
+multi-logic specification. Hets is based on a graph of logics and
+languages (formalized as so-called institutions), their tools, and
+their translations.  This provides a clean semantics of heterogeneous
+specification, as well as a corresponding proof calculus. For proof
+management, the calculus of development graphs (known from other
+large-scale proof management systems) has been adapted to
+heterogeneous specification. Development graphs provide an overview of
+the (heterogeneous) specification module hierarchy and the current
+proof state, and thus may be used for monitoring the overall
+correctness of a heterogeneous development.},
+  status = {Reviewed}
+}
+
+@Article{MossakowskiEtAl05,
+  author = {T. Mossakowski and S. Autexier and D. Hutter},
+  title = {Development Graphs -- Proof Management for Structured Specifications},
+  year = {2006},
+  journal = {Journal of Logic and Algebraic Programming},
+  volume = {67},
+  pages = {114-145},
+  number = {1-2},
+  keywords = {development graph proof logic institution completeness},
+  url = {http://www.sciencedirect.com/science?_ob=GatewayURL&_origin=CONTENTS&_method=citationSearch&_piikey=S1567832605000810&_version=1&md5=7c18897e9ffad42e0649c6b41203f41e},
+  psurl = {http://www.tzi.de/~till/papers/dgh_journal.ps},
+  abstract = {Development graphs are a tool for dealing with structured
+  specifications in a formal program development in order to ease the
+  management of change and reusing proofs. In this work, we extend
+  development graphs with hiding (e.g. hidden operations).  Hiding is
+  a particularly difficult to realize operation, since it does not
+  admit such a good decomposition of the involved specifications as
+  other structuring operations do. We develop both a semantics and
+  proof rules for development graphs with hiding. The rules are proven
+  to be sound, and also complete relative to an oracle for
+  conservative extensions. We also show that an absolutely complete set
+  of rules cannot exist. 
+
+  The whole framework is developed in a way independent of the
+  underlying logical system (and thus also does not prescribe the
+  nature of the parts of a specification that may be hidden).  We also
+  show how various other logic independent specification formalisms
+  can be mapped into development graphs; thus, development graphs can
+  serve as a kernel formalism for management of proofs and of change.},
+  issn = {1567-8326},
+  status = {Reviewed}
+}
+
+@Book{blackburn_p-etal:2001a,
+  author =	"Patrick BLackburn and Maarten de Rijke and Yde
+		 Venema",
+  title =	"Modal Logic",
+  publisher =	"Cambridge University Press",
+  year = 	"2001",
+  address =	"Cambridge, England",
+  ISBN = 	"0 521 52714 7 (pbk)",
+  topic =	"modal-logic;",
+}
