--- a/doc/BuildingAnInstaller.tex
+++ b/doc/BuildingAnInstaller.tex
@@ -139,7 +139,7 @@ Hets/
     \begin{itemize}
     \item hets-XX --- the real binary of hets with version number as extension,
       e.g. \verb,hets-0.52,
-    \item owl_parser --- OWL-DL parser startup script
+    \item owl\_parser --- OWL-DL parser startup script
     \item java/ --- all jar files needed by hets
       \begin{itemize}
       \item OWLparser.jar --- jar-file(s) for OWL-DL parser
