fixed Klaus' name git-svn-id: https://svn-agbkb.informatik.uni-bremen.de/Hets/trunk@7728 cec4b9c1-7d33-0410-9eda-942365e851bb

--- a/doc/UserGuide.tex
+++ b/doc/UserGuide.tex
@@ -117,7 +117,7 @@
 
 \title{{\bf \protect{\LARGEHets} User Guide}\\ 
 -- Version 0.7 --}
-\author{Till Mossakowski, Christian Maeder, Klaus Lüttich\\[1em]
+\author{Till Mossakowski, Christian Maeder, Klaus L\"{u}ttich\\[1em]
 DFKI Lab Bremen, Bremen, Germany.\\[1em]
 Comments to: hets-users@informatik.uni-bremen.de
 }
