restore the lib/hets git-svn-id: https://svn-agbkb.informatik.uni-bremen.de/Hets/trunk@7737 cec4b9c1-7d33-0410-9eda-942365e851bb

--- a/doc/BuildingAnInstaller.tex
+++ b/doc/BuildingAnInstaller.tex
@@ -139,8 +139,8 @@ Hets/
     \begin{itemize}
     \item hets-XX --- the real binary of hets with version number as extension,
       e.g. \verb,hets-0.52,
-    \item OWLParser/owl\_parser --- OWL-DL parser startup script
-    \item OWLParser/java/ --- all jar files needed by hets
+    \item owl\_parser --- OWL-DL parser startup script
+    \item java/ --- all jar files needed by hets
       \begin{itemize}
       \item OWLparser.jar --- jar-file(s) for OWL-DL parser
       \item jlib/ --- additional jar files for the OWLparser
