improved documentation about comorphisms git-svn-id: https://svn-agbkb.informatik.uni-bremen.de/Hets/trunk@7756 cec4b9c1-7d33-0410-9eda-942365e851bb

--- a/doc/UserGuide.tex
+++ b/doc/UserGuide.tex
@@ -316,9 +316,7 @@ CASL2CoCASL &  inclusion \\\hline
 CASL2CspCASL & inclusion \\\hline
 CASL2HasCASL & inclusion \\\hline
 CASL2Modal & inclusion \\\hline
-CASL2PCFOL &  coding of subsorting by injections, see Chap. III:3.1 of the CASL Reference Manual \cite{CASL/RefManual}\\\hline
-CASL2SPASS & coding of CASL to SoftFOL \cite{LuettichEA06a},
-based on SuleCFOL2SoftFOL, but with SPASS syntax as output \\\hline
+CASL2PCFOL &  coding of subsorting by injections, see Chap.\ III:3.1 of the CASL Reference Manual \cite{CASL/RefManual}\\\hline
 CASL2SubCFOL & coding of partial functions by error elements
 (translation $(4a')$ of \cite{Mossakowski02}, but extended to subsorting) \\\hline
 CASL2TopSort & coding of subsorting by a top sort and unary
@@ -335,15 +333,18 @@ CoCFOL2IsabelleHOL & coding of \CoCASL to Isabelle, similar to CFOL2IsabelleHOL 
 HasCASL2HasCASL & coding of \HasCASL axiomatic recursive definitions
 as \HasCASL recursive program definitions   \\\hline
 HasCASL2Haskell & translation of \HasCASL recursive program definitions to Haskell \\\hline
-HasCASL2IsabelleHOL & coding to Isabelle/HOL \\\hline
-Haskell2IsabelleHOLCF & coding to Isabelle/HOLCF \\\hline
+HasCASL2IsabelleHOL & coding of HasCASL to Isabelle/HOL \cite{Groening05} \\\hline
+Haskell2IsabelleHOL & coding of Haskell to Isabelle/HOL \cite{TorriniEtAl07} \\\hline
+Haskell2IsabelleHOLCF & coding of Haskell to Isabelle/HOLCF \cite{TorriniEtAl07}\\\hline
 Modal2CASL & the standard translation of modal logic
 to first-order logic \cite{blackburn_p-etal:2001a} \\\hline
 %PCFOL2CFOL & coding of partial functions by error elements
 %(translation $(4a')$ of \cite{Mossakowski02}) \\\hline
+PCoClTyConsHOL2IsabelleHOL &  coding of \HasCASL to Isabelle/HOL\\\hline
 SuleCFOL2SoftFOL & coding of CASL to SoftFOL \cite{LuettichEA06a},
 mapping types to soft types \\\hline
-PCoClTyConsHOL2IsabelleHOL &  coding of \HasCASL to Isabelle/HOL\\\hline
+SuleCFOL2SoftFOLIndcuction & dto., but with instances of induction
+axioms for all proof goals\\\hline
 Prop2CASL &  inclusion \\\hline
 Prop2CNF &  conversion of propositional formulas to conjunctive normal form\\\hline
 \end{tabular}
