--- a/doc/hets.bib
+++ b/doc/hets.bib
@@ -193,3 +193,21 @@ correctness of a heterogeneous development.},
   ISBN = 	"0 521 52714 7 (pbk)",
   topic =	"modal-logic;",
 }
+
+@unpublished{TorriniEtAl07,
+  author = {Paolo Torrini and Christoph L\"{u}th and
+            Christian Maeder and Till Mossakowski}, 
+  title = {Translating Haskell to Isabelle},
+  note = {submitted for publication},
+}
+
+
+@MastersThesis{Groening05,
+  author = 	 {Sonja Gr\"{o}ning},
+  title = 	 {Beweisunterst\"{u}tzung f\"{u}r HasCASL in Isabelle
+/HOL},
+  school = 	 {University of Bremen},
+  note =         {Diplomarbeit},
+  year = 	 {2005},
+}
+
