typo git-svn-id: https://svn-agbkb.informatik.uni-bremen.de/Hets/trunk@7760 cec4b9c1-7d33-0410-9eda-942365e851bb

--- a/doc/UserGuide.tex
+++ b/doc/UserGuide.tex
@@ -220,7 +220,7 @@ integration of \CASL extensions and keeps the effort of integrating
 \CASL extensions quite moderate.
 
 \item[CoCASL] \cite{MossakowskiEA04} is a coalgebraic extension of \CASL,
-suited for the specification of process types and reactive system.
+suited for the specification of process types and reactive systems.
 The central proof method is coinduction.
 
 \item[ModalCASL] \cite{ModalCASL}
