added mailing list without subscription git-svn-id: https://svn-agbkb.informatik.uni-bremen.de/Hets/trunk@7803 cec4b9c1-7d33-0410-9eda-942365e851bb

--- a/doc/UserGuide.tex
+++ b/doc/UserGuide.tex
@@ -119,7 +119,9 @@
 -- Version 0.7 --}
 \author{Till Mossakowski, Christian Maeder, Klaus L\"{u}ttich\\[1em]
 DFKI Lab Bremen, Bremen, Germany.\\[1em]
-Comments to: hets-users@informatik.uni-bremen.de
+Comments to: hets@informatik.uni-bremen.de\\
+or to: hets-users@informatik.uni-bremen.de \\
+(the latter needs subscription to the mailing list)
 }
 
 \maketitle
@@ -1161,10 +1163,6 @@ to be provided.
 
 The architecture of \Hets is shown in Fig.~\ref{fig:hets}. 
 
-If your favourite logic is missing in \Hets, please tell us
-(hets-users@informatik.uni-bremen.de). We will take account your feedback when deciding which
-logics and proof tools to integrate next into \Hets. Help with
-integration of more logics and proof tools into \Hets is also welcome.
 
 \Hets is mainly maintained by
 Christian Maeder (Christian.Maeder@dfki.de) and Till Mossakowski
@@ -1176,6 +1174,15 @@ the homepage is
 \begin{quote}
 \url{http://www.informatik.uni-bremen.de/mailman/listinfo/hets-users}.
 \end{quote}
+
+You need to subscribe to the list before you can send a mail.
+But note that subscription is very easy!
+
+If your favourite logic is missing in \Hets, please tell us
+(hets-users@informatik.uni-bremen.de). We will take account your
+feedback when deciding which logics and proof tools to integrate next
+into \Hets. Help with integration of more logics and proof tools into
+\Hets is also welcome.
 
 \paragraph{Acknowledgement}
 The heterogeneous tool set \Hets, which shows that the theory outlined
